# svg2dxf

./: .gitignore  README.md  pyproject.toml
src/svg2dxf/: __init__.py  cli.py  converter.py  dxf_writer.py  geometry.py  models.py  svg_parser.py
tests/: test_geometry.py  test_integration.py  test_parser_transform.py  test_text.py
